update gradle-intellij-plugin to v1.3.1