@@ -12,7 +12,7 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.intellij' version '1.2.0'
+    id 'org.jetbrains.intellij' version '1.3.1'
     id 'org.jetbrains.kotlin.jvm' version '1.5.10' // This should match the Kotlin version in gradle.properties. (update to '1.5.31' when bump min Intellij)
     id 'net.saliman.cobertura' version '4.0.0'
     id 'com.github.kt3k.coveralls' version '2.10.2'
@@ -154,6 +154,7 @@ intellij {
             '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
             '--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED',
             '--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED',
+            '--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED', // Linux only
             '--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED',  // Mac OSX only
             '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
         ]
@@ -164,6 +165,8 @@ intellij {
         jvmArgs = [
             '--illegal-access=warn',
             '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
             '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
             '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
             '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
@@ -188,6 +191,9 @@ intellij {
         // The package names have to be prefixed with a #
         systemProperties['idea.log.debug.categories'] = '#io.github.intellij.dlanguage'
         //systemProperties['idea.log.trace.categories'] = '#io.github.intellij.dlanguage'
+
+        // Enable internal mode (https://plugins.jetbrains.com/docs/intellij/enabling-internal.html)
+        systemProperties['idea.is.internal'] = "true"
 
         // Set these properties to test alternative languages
         // systemProperties["user.language"] = "de"
